@@ -746,6 +746,8 @@ Tests
 Build
 -----
 
+- Drop support for Windows 2000.
+
 - Issue #17029: Let h2py search the multiarch system include directory.
 
 - Issue #16953: Fix socket module compilation on platforms with
